--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style shet.css">
 </head>
 <body>
-   <section class="hero5_img">
+   <section class="hero_img">
     <div class="hero_wrapper">
         <h1> THE FOOD YOU LOVE</h1>
         <p>Fast food is a type of mass-produced food designed for commercial resale, with a strong priority placed on speed of service. It is a commercial term, limited to food sold in a restaurant or store with frozen, preheated or precooked ingredients and served in packaging for take-out/take-away</p>
-        <form action="">
+        <form class="style">
             <input type="text" placeholder="Enter your post code">
             <button type="submit">Find Food</button>
         </form>
