--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1> THE FOOD YOU LOVE</h1>
         <p>Fast food is a type of mass-produced food designed for commercial resale, with a strong priority placed on speed of service. It is a commercial term, limited to food sold in a restaurant or store with frozen, preheated or precooked ingredients and served in packaging for take-out/take-away</p>
         <form class="style">
-            <input type="text" placeholder="Enter your post code">
+            <input class ="form"type="text" placeholder="Enter your post code">
             <button type="submit">Find Food</button>
         </form>
 
