--- a/index.html
+++ b/index.html
@@ -20,5 +20,31 @@
     </div>
 
    </section>
+   
+    <div>
+        <img class ="non"src="hero1_img.jpg" alt="">
+        <h1 class="food1">Food 1</h1>
+        <p>Fast food is a type of mass-produced food designed for commercial resale, with a strong priority placed on speed of service. It is a commercial term, limited to food sold in a restaurant or store with frozen, preheated or precooked ingredients and served in packaging for take-out/take-away</p>
+    </div>
+   </section>
+ 
+    <div>
+        <img src="hero4_img.jpg" alt="">
+        <h1 class="food1">Food 1</h1>
+        <p>Fast food is a type of mass-produced food designed for commercial resale, with a strong priority placed on speed of service. It is a commercial term, limited to food sold in a restaurant or store with frozen, preheated or precooked ingredients and served in packaging for take-out/take-away</p>
+    </div>
+   </section>
+   <div>
+       <img src="hero3_img.jpg" alt="">
+       <h1 class="food1">Food 1</h1>
+       <p>Fast food is a type of mass-produced food designed for commercial resale, with a strong priority placed on speed of service. It is a commercial term, limited to food sold in a restaurant or store with frozen, preheated or precooked ingredients and served in packaging for take-out/take-away</p>
+   </div>
+  </section>
+  <div>
+      <img src="hero2_img.jpg" alt="">
+      <h1 class="food1">Food 1</h1>
+      <p>Fast food is a type of mass-produced food designed for commercial resale, with a strong priority placed on speed of service. It is a commercial term, limited to food sold in a restaurant or store with frozen, preheated or precooked ingredients and served in packaging for take-out/take-away</p>
+  </div>
+ </section>
 </body>
 </html>
